examples/test/testpolicy12764.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12764
  namespace: namespace200
spec:
  podSelector:
    matchLabels:
      key11: value2
      key9: value0
      key21: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value20
      podSelector:
        matchLabels:
          key26: value49
